# mdnscheckup

./: README.md  mdnscheckup.code-workspace  pyproject.toml  requirements-dev.txt  requirements.txt
mdnscheckup/: ipv6check.py  mdnscheckup.py
mndscheckup/: mdnscheckup.py
scripts/: mdnscheckup
